Fixed variables and set up dark mode ones

--- a/style.css
+++ b/style.css
@@ -11,16 +11,21 @@
 /* All Variables Needed */
 :root {
     --primary-color: #708fe4; 
-    --secondary-color: #192a5e; 
+    --secondary-color: #4f76ea; 
     --accent-color: #1749c8; 
-    --background-color: #030307; 
-    --text-color: #eef0f6; 
-    --primaryfont: 'Quantify', sans-serif; 
-    --main-color: #3d5af1;
-    --main-color-dark: #3651d4;
-    --main-color-light: #5872f5;
-    --text-color: #cfcde7;
-}
+    --background-color: #d9d9f2; 
+    --text-color: #3c2f9b; 
+    --primary-font: 'Quantify', sans-serif; 
+}  
+.dark-mode{
+    --primary-color: #191f30; 
+    --secondary-color: #28396b; 
+    --accent-color: #094aef; 
+    --background-color: #030303; 
+    --text-color: #9c95a9; 
+    --primary-font: 'Quantify', sans-serif; 
+} 
+
 
 
 @font-face {
@@ -31,27 +36,11 @@
     font-style: normal;
     font-display: swap;
 }
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-
-*,
-*::before,
-*::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-:root {
-  --main-color: #3d5af1;
-  --main-color-dark: #3651d4;
-  --main-color-light: #5872f5;
-  --text-color: #cfcde7;
-}
 
 body {
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
-  background-color: #e4e2f5;
+  background-color: var(--background-color);
   min-height: 100vh;
   display: flex;
   position: relative;
@@ -70,10 +59,10 @@ nav {
   top: 0;
   left: 0;
   height: 100vh;
-  background-color: var(--main-color);
+  background-color: var(--primary-color);
   width: 16rem;
   padding: 1.8rem 0.85rem;
-  color: #fff;
+  color: var(--text-color);
   display: flex;
   flex-direction: column;
   transition: width 0.5s ease-in-out;
@@ -91,7 +80,8 @@ nav::before {
 main {
   flex: 1;
   padding: 2rem;
-  color: #1f2027;
+  color:var(--text-color);
+  
   display: flex;
   flex-direction: column;
 }
@@ -100,16 +90,6 @@ main h1 {
   margin-bottom: 1rem;
 }
 
-main .copyright {
-  margin-top: auto;
-  font-size: 0.9rem;
-}
-
-main .copyright span {
-  color: var(--main-color);
-  font-weight: 500;
-  cursor: pointer;
-}
 
 .sidebar-top {
   position: relative;
@@ -133,7 +113,7 @@ main .copyright span {
   top: 50%;
   height: 27px;
   padding: 0 0.3rem;
-  background-color: var(--main-color);
+  background-color: var(--primary-color);
   border-radius: 6px;
   cursor: pointer;
   box-shadow: 0 3px 10px -3px rgba(70, 46, 118, 0.3);
@@ -150,7 +130,7 @@ main .copyright span {
 }
 
 .shrink-btn:hover {
-  background-color: var(--main-color-dark);
+  background-color: var(--background-color);
 }
 
 nav:hover .shrink-btn,
@@ -162,7 +142,7 @@ nav:hover .shrink-btn,
 
 .search {
   min-height: 2.7rem;
-  background-color: var(--main-color-light);
+  background-color: var(--background-color);
   margin: 2rem 0.5rem 1.7rem;
   display: grid;
   grid-template-columns: 2.7rem 1fr;
@@ -244,7 +224,7 @@ nav:hover .shrink-btn,
 .active-tab {
   width: 100%;
   height: 53px;
-  background-color: var(--main-color-dark);
+  background-color: var(--secondary-color);
   border-radius: 10px;
   position: absolute;
   top: 2.5px;
@@ -331,7 +311,7 @@ nav:hover .shrink-btn,
   display: flex;
   height: 40px;
   min-width: 2.4rem;
-  background-color: var(--main-color-dark);
+  background-color: var(--accent-color);
   color: var(--text-color);
   align-items: center;
   justify-content: center;
@@ -346,7 +326,7 @@ nav:hover .shrink-btn,
 }
 
 .tooltip {
-  background-color: var(--main-color);
+  background-color: var(--secondary-color) ;
   position: absolute;
   right: -1.2rem;
   top: 0;
